# homebrew-8bit-cpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: c-cpp.yml  ci.yml
examples/: all_instructions.asm  fib.asm  fibonacci.asm  hello_world.asm  input.asm
src/: CMakeLists.txt  cpu.cpp  cpu.h  instruction_serializer.cpp  instruction_serializer.h
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.h  define_table.cpp  define_table.h  instruction_parser.cpp  instruction_parser.h  label_table.cpp  label_table.h  macro.cpp  macro.h  macro_generator.cpp  macro_generator.h  main.cpp  tokenizer.cpp  tokenizer.h
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  instruction_serializer.cpp  instruction_serializer.h  state.cpp  state.h
src/decoder/: CMakeLists.txt  decoder.cpp  decoder.h  decoder_main.cpp  main.cpp
src/emulator/: CMakeLists.txt  emulator.cpp  emulator.h  main.cpp  microcode_executor.cpp  microcode_executor.h  renderer.cpp  renderer.h  state.cpp  state.h
test/: CMakeLists.txt  tests.cpp
test/cpu/: CMakeLists.txt  instruction_serializer.cpp
test/emulator/: CMakeLists.txt  emulator.cpp
test/integration/: CMakeLists.txt  test.cpp
test/testing_commons/: CMakeLists.txt  commons.cpp  commons.h
